--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,47 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+<main class="flex flex-col w-full h-full items-center justify-center bg-gray-100 font-sans text-lg font-medium">
+		<h1 class="text-2xl text-gray-700 font-medium">Porcentaje a la inversa</h1>
+		<br>
+	<div>
+		<form action="">
+			<div class="mb-4">
+				<label for="valor" class="block text-gray-700 text-sm font-bold mb-2">Valor</label>
+				<input type="text" id="valor" name="valor" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" />
+			</div>
+			<div class="mb-6">
+				<label for="porcentaje" class="block text-gray-700 text-sm font-bold mb-2">Porcentaje</label>
+				<input type="text" id="porcentaje" name="porcentaje" class="shadow appearance-none border border-red rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" />
+			</div>
+			<div class="mb-6">
+				<span id="res" class="font-bold text-2xl text-blue-500"></span>
+			</div>
+			<div class="flex items-center justify-between">
+				<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+					Calcular
+				</button>
+			</div>
+		</form>
+	</div>
+</main>
+<script>
+	const valor = document.getElementById('valor') as HTMLInputElement | null;
+	const porcentaje = document.getElementById('porcentaje') as HTMLInputElement | null;
+	const res = document.getElementById('res');
+	const formatMillesimal = (num: string) => num.replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+	const button = document.querySelector('button');
+	if (button && valor && porcentaje && res) {
+		button.addEventListener('click', () => {
+			if (valor.value && porcentaje.value) {
+				const result = parseFloat(valor.value) * (1 + (parseFloat(porcentaje.value) / 100));
+				res.textContent = `El ${porcentaje.value}% de ${formatMillesimal(valor.value)}.00 es ${result.toFixed(2)}`;
+			}
+		});
+	}
+</script>
 </Layout>
+
