--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,24 +4,23 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-<main class="flex flex-col w-full h-full items-center justify-center bg-gray-100 font-sans text-lg font-medium">
-		<h1 class="text-2xl text-gray-700 font-medium">Porcentaje a la inversa</h1>
-		<br>
-	<div>
+<main class="flex flex-col w-full h-full items-center justify-center bg-gradient-to-r from-blue-100 to-purple-100 font-sans text-lg font-medium p-6">
+	<h1 class="text-4xl text-gray-800 font-bold mb-6 animate-bounce">Porcentaje a la inversa</h1>
+	<div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-md">
 		<form action="">
 			<div class="mb-4">
 				<label for="valor" class="block text-gray-700 text-sm font-bold mb-2">Valor</label>
-				<input type="text" id="valor" name="valor" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" />
+				<input type="text" id="valor" name="valor" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline transition duration-300 ease-in-out transform hover:scale-105" />
 			</div>
 			<div class="mb-6">
 				<label for="porcentaje" class="block text-gray-700 text-sm font-bold mb-2">Porcentaje</label>
-				<input type="text" id="porcentaje" name="porcentaje" class="shadow appearance-none border border-red rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" />
+				<input type="text" id="porcentaje" name="porcentaje" class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline transition duration-300 ease-in-out transform hover:scale-105" />
 			</div>
 			<div class="mb-6">
 				<span id="res" class="font-bold text-2xl text-blue-500"></span>
 			</div>
 			<div class="flex items-center justify-between">
-				<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+				<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline transition duration-300 ease-in-out transform hover:scale-105" type="button">
 					Calcular
 				</button>
 			</div>
