--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 <main class="flex flex-col w-full h-full items-center justify-center bg-gradient-to-r from-blue-100 to-purple-100 font-sans text-lg font-medium p-6">
-	<h1 class="text-4xl text-gray-800 font-bold mb-6 animate-bounce">Porcentaje a la inversa</h1>
+	<h1 class="text-4xl text-center text-gray-800 font-bold mb-6 animate-bounce">El precio antes del descuento: un cálculo inverso</h1>
 	<div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-md">
 		<form action="">
 			<div class="mb-4">
